--- a/static/css/base_style.css
+++ b/static/css/base_style.css
@@ -1,6 +1,6 @@
 body {
     font-family: "Roboto", sans-serif, serif;
-    font-weight: 300;
+    font-weight: 320;
     font-size: 16px;
 
     line-height: 1.4;
@@ -16,6 +16,10 @@ body {
 
 ul {
     margin: 0.5em 0 1em 1em;
+}
+
+ol {
+
 }
 
 p {
