--- a/static/css/base_style.css
+++ b/static/css/base_style.css
@@ -33,3 +33,18 @@ a {
     padding: 0.2em;
     border-radius: 0.2em;
 }
+
+.egg-rating{
+    display: inline-flex;
+    align-items: center;
+    vertical-align: center;
+}
+.egg-icon{
+    height: 1em;
+    width: 1em;
+    vertical-align: center;
+}
+
+table.ratings td{
+    padding: 0 1em 0 0;
+}
